# fortune-cookie-factory

./: .gitignore  README.md
.github/workflows/: deploy.yaml
fortune-cookie-factory/: README.md  pyproject.toml
fortune-cookie-factory/fortune_cookie/: app.py
fortune-cookie-factory/tests/: test_project.py
